--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h2>Practice Web Development</h2>
         <div class="codeLogo image-container">
-            <a target="_blank" href="editor/editor.html">
+            <a href="editor/editor.html">
               <img src="images/pngwing.com.png" alt="code logo" width="180" height="120">
             </a>
             <div class="desc descCode">Open Code Editor</div>
