--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Learn to code with Code Editor</title>
+    <title>Learn to Code with Editor</title>
 </head>
 <body>
     <div class="container">
         <h2>Practice Web Development</h2>
         <div class="codeLogo image-container">
-            <a href="editor/editor.html">
+            <a  href="editor/editor.html">
               <img src="images/pngwing.com.png" alt="code logo" width="180" height="120">
             </a>
             <div class="desc descCode">Open Code Editor</div>
@@ -20,19 +20,19 @@
         <h2>Learn Web Development</h2>
         
         <div class="htmlLogo image-container">
-            <a target="_blank" href="htmlLessons/htmlIntroduction.html">
+            <a target="_blank" href="html page/htmlPage.html">
               <img src="images/htmp.png" alt="html logo" width="200" height="150">
             </a>
             <div class="desc descHtml">Learn HTML</div>
         </div>
         <div class="cssLogo image-container">
-        <a target="_blank" href="#">
+        <a target="_blank" href="css page/cssPage.html">
             <img src="images/css.png" alt="css logo" width="200" height="150">
         </a>
         <div class="desc descCss">Learn CSS</div>
         </div>
         <div class="jsLogo image-container">
-        <a target="_blank" href="#">
+        <a target="_blank" href="js page/jsPage.html">
             <img src="images/js.png" alt="javascript logo" width="200" height="150">
         </a>
         <div class=" desc descJs">Learn Javascript</div>
