--- a/editor/editor.html
+++ b/editor/editor.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="editor.css">
-    <title>Editor</title>
+    <title>Code Editor</title>
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,17 @@
         </div>
     
         <div class="editor">
-            <textarea name="" id="htmlCode" placeholder="HTML code goes here.."></textarea>
+            <textarea name="" id="htmlCode" placeholder="HTML code goes here..">
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+    &lt;head&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+
+
+    &lt;/body&gt;
+&lt;/html&gt;
+            </textarea>
             <textarea name="" id="cssCode" placeholder="CSS code goes here.."></textarea>
             <textarea name="" id="jsCode" placeholder="JavaScript code goes here.."></textarea>
             <iframe id="output" src="" frameborder="0" ></iframe>
