--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="desc descCss">Learn CSS</div>
         </div>
         <div class="jsLogo image-container">
-        <a target="_blank" href="js page/jsPage.html">
+        <a target="_blank" href="js page/jspage.html">
             <img src="images/js.png" alt="javascript logo" width="200" height="150">
         </a>
         <div class=" desc descJs">Learn Javascript</div>
