--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Learn Web Development</h2>
         
         <div class="htmlLogo image-container">
-            <a target="_blank" href="html page/htmlPage.html">
+            <a target="_blank" href="html page/htmlPage">
               <img src="images/htmp.png" alt="html logo" width="200" height="150">
             </a>
             <div class="desc descHtml">Learn HTML</div>
